--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://OTTO-Mixr.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Otto, The Truly Open Mixer
+subtitle: Bringing the Bar Experience to You 
+author: Team OTTO
 simple_search: https://www.google.com/search
 description:
 
